# qcefnode-juejin-course

./: .clang-format  .gitignore  LICENSE  README.md  build.py
Python3.7.9/: LICENSE.txt  NEWS.txt
Python3.7.9/DLLs/: _ctypes_test.pyd  _testbuffer.pyd  _testconsole.pyd  _testimportmultiple.pyd  _testmultiphase.pyd
Python3.7.9/Lib/ctypes/test/: test_callbacks.py
Python3.7.9/Lib/distutils/tests/: __init__.py  test_build_ext.py
Python3.7.9/Lib/ensurepip/: __init__.py
Python3.7.9/Lib/idlelib/: NEWS.txt  calltip.py  configdialog.py  help.html  pyshell.py  query.py
Python3.7.9/Lib/idlelib/Icons/: README.txt
Python3.7.9/Lib/idlelib/idle_test/: test_autocomplete.py  test_calltip.py  test_query.py
Python3.7.9/Lib/lib2to3/pgen2/: grammar.py  tokenize.py
Python3.7.9/Lib/lib2to3/tests/: test_parser.py
Python3.7.9/Lib/sqlite3/test/: regression.py  types.py
Python3.7.9/Lib/test/: _test_multiprocessing.py  clinic.test  pickletester.py  pythoninfo.py  test_asyncgen.py  test_buffer.py  test_builtin.py  test_capi.py  test_cgi.py  test_codeop.py  test_concurrent_futures.py  test_contextlib_async.py  test_doctest.py  test_enum.py  test_future.py  test_gdb.py  test_httplib.py  test_imaplib.py  test_ipaddress.py  test_math.py  test_os.py  test_pathlib.py  test_platform.py  test_regrtest.py  test_site.py  test_socket.py  test_struct.py  test_subprocess.py  test_support.py  test_symtable.py  test_tarfile.py  test_tempfile.py  test_typing.py  test_urllib.py  test_urllib2.py  test_venv.py  test_xml_etree_c.py
Python3.7.9/Lib/test/libregrtest/: cmdline.py  main.py  runtest.py  setup.py
Python3.7.9/Lib/test/support/: __init__.py
Python3.7.9/Lib/test/test_email/: test_email.py  test_headerregistry.py
Python3.7.9/Lib/test/test_json/: test_tool.py
Python3.7.9/Lib/unittest/test/: test_case.py
Python3.7.9/Tools/parser/: unparse.py
Python3.7.9/include/: object.h  patchlevel.h  pystate.h
cefnode/: .gclient  .gitignore
cefnode/patches/cef/: 0001-cef_node.patch  0002-Add-message-pump-handler-support.patch
cefnode/patches/node/: 0001-build_add_gn_build_files.patch  0002-be-compatible-with-cppgc.patch  0003-chore-read-_noBrowserGlobals-from-global-not-config.patch  0004-feat-add-uv_loop-watcher_queue-code.patch  0005-fix-crash-caused-by-GetHostNameW-on-Windows-7.patch  0006-workaround-NOT_BUILD_WINDOWS_DEPRECATE.patch  0007-using-AddCleanUpHook-to-free-up-env.patch  0008-Enter-the-v8-context-of-the-saved-env-before-calling.patch
cefnode/script/: apply_all_patches.py
ch-10/: main.cc
ch-11/: CMakeLists.txt  main.cc  parser.py  reflect.hpp
ch-12/: CMakeLists.txt  main.cc
ch-13/: .gitignore  CMakeLists.txt  cv.cc
ch-13/web/: package-lock.json
ch-13/web/src/: App.js
ch-14/: CMakeLists.txt  cv.cc
ch-14/tools/: webpackmanifest2qrc.py
ch-14/web/src/: App.js
ch-16/: .gitignore  CMakeLists.txt  main.cc
ch-16/web/: package-lock.json
ch-18/: CMakeLists.txt  main.cc
ch-3/cef/: CMakeLists.txt  main.cc
ch-3/qwebengine/: CMakeLists.txt  main.cc
ch-4/: .gitignore  CMakeLists.txt  main.cc  package-lock.json  package.json  vscode-encrypt-native.node
ch-5/cef-webchannel/: CMakeLists.txt  main.cc
ch-5/webchannel/: CMakeLists.txt  index.html  main.cc
ch-6/: main.cc
ch-7/function/: main.cc
ch-7/threadsafefunction/: CMakeLists.txt  main.cc  win_delay_load_hook.cc
ch-8/: CMakeLists.txt  main.cc
ch-9/: main.cc
